--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^4.17.18",
-        "eslint": "^8.50.0"
+        "@types/express": "^4.17.18"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
+        "eslint": "^8.51.0",
         "express": "^4.18.2",
         "mongodb": "^6.1.0",
         "nodemon": "^3.0.1"
